force-app/main/default/objects/BMCServiceDesk__Change_CI_Link__c/BMCServiceDesk__Change_CI_Link__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpCommonLink</customHelpPage>
    <description>This object allows you to store data linking between changes and configuration items.</description>
    <label>Change CI Link</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change CI Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>