force-app/main/default/objects/BMCServiceDesk__Change_CI_Link__c/fields/BMCServiceDesk__FKChange__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKChange__c</fullName>
    <description>This field stores the foreign key value of the linked change</description>
    <label>Change</label>
    <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
    <relationshipLabel>Linked Services, Configuration Items and Assets</relationshipLabel>
    <relationshipName>Change_CI_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>